--- a/pom.xml
+++ b/pom.xml
@@ -576,9 +576,10 @@
                 <scope>provided</scope>
             </dependency>        
             <dependency>
-                <groupId>org.biojava</groupId>
-                <artifactId>biojava-core</artifactId>
-                <version>4.0.0</version>
+                <groupId>com.github.kevinsawicki</groupId>
+                <artifactId>http-request</artifactId>
+                <version>6.0</version>
+                <scope>provided</scope>
             </dependency>
             <!--End of additional provided dependencies-->
 
