updated search error text

--- a/plugins/SearchView/src/main/resources/searchmoderesidue.properties
+++ b/plugins/SearchView/src/main/resources/searchmoderesidue.properties
@@ -1,7 +1,7 @@
 searchRegexResidue=Residues
 searchRegexResidueTF=Enter sequence or pattern to search residues.
 searchErrorNotLoaded=Residues for {0} not available.  Please load residues before searching.
-searchErrorShort=Search must contain at least 4 characters
+searchErrorShort=Search input cannot be empty
 searchErrorSyntax=Regular expression syntax error...\n{0}
 searchErrorRegex=Problem with regular expression...
 searchSelectSeq=Searching {0} will change the main view to show {1}.\nProceed?
