--- a/pom.xml
+++ b/pom.xml
@@ -693,6 +693,11 @@
                 <artifactId>freehep-graphicsio-svg</artifactId>
                 <version>2.4</version>
             </dependency>
+	    <dependency>
+                <groupId>org.jfree</groupId>
+                <artifactId>jfreesvg</artifactId>
+                <version>2.1</version>
+            </dependency>
             <dependency>
                 <groupId>org.jdom</groupId>
                 <artifactId>jdom</artifactId>
