--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -392,3 +392,9 @@ defaultExportFileName=IGB
 exportDialogTitle=Export Image
 
 bamIndexNotFound=Could not load index file for {0}. An index file is required for BAM files.
+
+dataSourceTabName=Data Sources
+serverCredentials=Server Credentials
+siteNotResponding=Site not responding. Check the URL or contact site maintainers.
+mirrorUrlMessage=Using Mirror URL for this Data Source.
+editDataSource=Edit Data Source
