--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -393,8 +393,15 @@ exportDialogTitle=Export Image
 
 bamIndexNotFound=Could not load index file for {0}. An index file is required for BAM files.
 
+#UI Texts for Data Source tab
 dataSourceTabName=Data Sources
 serverCredentials=Server Credentials
 siteNotResponding=Site not responding. Check the URL or contact site maintainers.
 mirrorUrlMessage=Using Mirror URL for this Data Source.
 editDataSource=Edit Data Source
+increaseLoadPriority=Increase load priority
+decreaseSeqServerPriority=Decrease sequence server priority
+removeButton=Remove\u2026
+authenticateButton=Enter Password\u2026
+editButton=Edit\u2026
+addButton=Add\u2026
