--- a/.gitignore
+++ b/.gitignore
@@ -124,3 +124,4 @@ extbundles/
 /plugins/image-exporter/target/
 /optionalPlugins/23andMe-snp-converter/target/
 /core/quickload/target/
+/core/das/target/
