Fixed exception when entering and saving wrong credentials

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -405,3 +405,4 @@ removeButton=Remove\u2026
 authenticateButton=Enter Password\u2026
 editButton=Edit\u2026
 addButton=Add\u2026
+invalidCredentials=Invalid Credentials
