completed work on initial addition of das2 dataprovider

--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,7 @@
         <module>core/weblinks</module>
         <module>core/quickload</module>
         <module>core/das</module>
+        <module>core/das2</module>
         <module>plugins/ApolloLibrary</module>
         <module>plugins/AnnotationTab</module>
         <module>plugins/track-operations-panel</module>
@@ -236,6 +237,12 @@
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>das</artifactId>
+                <version>${project.version}</version>
+                <scope>provided</scope>
+            </dependency>
+            <dependency>
+                <groupId>com.lorainelab</groupId>
+                <artifactId>das2</artifactId>
                 <version>${project.version}</version>
                 <scope>provided</scope>
             </dependency>
