Added popup when search text not found

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -406,3 +406,5 @@ authenticateButton=Enter Password\u2026
 editButton=Edit\u2026
 addButton=Add\u2026
 invalidCredentials=Invalid Credentials
+
+searchTextNotFound=No match found for "{0}".
