Title for Add data source popup changed

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -399,6 +399,7 @@ serverCredentials=Server Credentials
 siteNotResponding=Site not responding. Check the URL or contact site maintainers.
 mirrorUrlMessage=Using Mirror URL for this Data Source.
 editDataSource=Edit Data Source
+addDataSource=Add Data Source
 increaseLoadPriority=Increase load priority
 decreaseSeqServerPriority=Decrease sequence server priority
 removeButton=Remove\u2026
