updated cache service

--- a/pom.xml
+++ b/pom.xml
@@ -117,6 +117,7 @@
         <module>plugins/image-exporter</module>
         <module>plugins/session-manager</module>               
         <module>plugins/Keybinding-registry</module>
+        <module>cache</module>
     </modules>
 
     <profiles>
