--- a/developmentPlugins/ParentOperators/pom.xml
+++ b/developmentPlugins/ParentOperators/pom.xml
@@ -77,7 +77,7 @@
                         <Export-Package/>
                         <Bundle-Activator>com.affymetrix.genometry.operator.extra.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-Description>Plugin to add operators to perform model level operations</Bundle-Description>
+                        <Bundle-Description>Install this if you want to perform operations on selected models.</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>            
