--- a/optionalPlugins/igb-command-socket/pom.xml
+++ b/optionalPlugins/igb-command-socket/pom.xml
@@ -11,7 +11,7 @@
     <artifactId>igb-command-socket</artifactId>
     <packaging>bundle</packaging>
 
-    <name>igb-command-socket</name>
+    <name>Command Socket</name>
 
     <dependencies>
         <dependency>
@@ -98,6 +98,7 @@
                         <Import-Package>com.affymetrix.igb.shared,*;resolution:=optional</Import-Package>
                         <Export-Package/>
                         <Bundle-Activator>com.lorainelab.igbr.Activator</Bundle-Activator>
+			<Bundle-Description>Install this to enable controlling IGB from other programs, like R.</Bundle-Description>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
                     </instructions>
                 </configuration>
