--- a/optionalPlugins/merge-annotation-operator/pom.xml
+++ b/optionalPlugins/merge-annotation-operator/pom.xml
@@ -13,7 +13,7 @@
     
     <packaging>bundle</packaging>
 
-    <name>Merge Annotation Operator</name>
+    <name>Combine Annotation Operator</name>
 
     <dependencies>       
         <dependency>
@@ -83,7 +83,7 @@
                         <Export-Package/>
                         <Bundle-Activator>com.gene.mergeannotationoperator.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
-                        <Bundle-Description>Annotation Operator that merges selected annotation tracks.</Bundle-Description>
+                        <Bundle-Description>Install this to enable merging selected annotation tracks.</Bundle-Description>
                     </instructions>
                 </configuration>
             </plugin>            
