--- a/main/pom.xml
+++ b/main/pom.xml
@@ -290,6 +290,11 @@
             <artifactId>org.apache.felix.bundlerepository</artifactId>
             <scope>runtime</scope>  
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>cache</artifactId>
+            <scope>runtime</scope>  
+        </dependency>
         <!--End of plugin module dependencies--> 
         <dependency> 
             <groupId>com.jidesoft</groupId>
