--- a/build.gradle
+++ b/build.gradle
@@ -45,7 +45,7 @@ task cleanOldBuild(type: Delete) {
 
 task media(dependsOn: cleanOldBuild, type: com.install4j.gradle.Install4jTask) {
     projectFile = file('distribution/igb.install4j')
-    variables = [projectHomeDirectory: projectDir, igbVersion: version, codeBaseUrl: System.getProperty('codebaseUrl')]
+    variables = [projectHomeDirectory: projectDir, igbVersion: System.getProperty('igbVersion'), codeBaseUrl: System.getProperty('codebaseUrl')]
     macKeystorePassword = props.get('appleKeypass')
     winKeystorePassword = props.get('appleKeypass')
 }
