--- a/main/pom.xml
+++ b/main/pom.xml
@@ -292,6 +292,11 @@
         </dependency>
         <dependency>
             <groupId>com.lorainelab</groupId>
+            <artifactId>cache-api</artifactId>
+            <scope>runtime</scope>  
+        </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
             <artifactId>cache</artifactId>
             <scope>runtime</scope>  
         </dependency>
