--- a/developmentPlugins/NCBIPrimer/pom.xml
+++ b/developmentPlugins/NCBIPrimer/pom.xml
@@ -95,9 +95,7 @@
                     <obrRepository>${project.parent.basedir}/extbundles</obrRepository>    
                     <instructions>
                         <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>                       
-                        <Embed-Dependency>*;scope=compile|runtime</Embed-Dependency>
-                        <Embed-Transitive>true</Embed-Transitive>       
-                        <Import-Package>com.affymetrix.igb.osgi.service,*;resolution:=optional</Import-Package>
+                        <Import-Package>*</Import-Package>
                         <Export-Package/>
                         <Bundle-Activator>apollo.Activator</Bundle-Activator>
                         <Bundle-ActivationPolicy>lazy</Bundle-ActivationPolicy>
