Moved protannot to plugins folder

--- a/.gitignore
+++ b/.gitignore
@@ -138,3 +138,4 @@ extbundles/
 /core/window_service/target
 /core/igbGenovizExtensionsApi/target
 /developmentPlugins/TutorialHelper/target
+/plugins/Protannot/target/
