--- a/pom.xml
+++ b/pom.xml
@@ -119,6 +119,7 @@
         <module>plugins/Keybinding-registry</module>
         <module>plugins/cache</module>
         <module>plugins/cache-api</module>
+        <module>plugins/Protannot</module>
     </modules>
 
     <profiles>
@@ -442,6 +443,11 @@
             <dependency>
                 <groupId>com.lorainelab</groupId>
                 <artifactId>cache-api</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.bioviz</groupId>
+                <artifactId>protannot</artifactId>
                 <version>${project.version}</version>
             </dependency>
             <!--End of plugin module dependencies-->
