--- a/main/pom.xml
+++ b/main/pom.xml
@@ -300,6 +300,11 @@
             <artifactId>cache</artifactId>
             <scope>runtime</scope>  
         </dependency>
+        <dependency>
+            <groupId>org.bioviz</groupId>
+            <artifactId>protannot</artifactId>
+            <scope>runtime</scope>
+        </dependency>
         <!--End of plugin module dependencies--> 
         <dependency> 
             <groupId>com.jidesoft</groupId>
