--- a/plugins/Protannot/pom.xml
+++ b/plugins/Protannot/pom.xml
@@ -42,11 +42,6 @@
             <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>org.freehep</groupId>
-            <artifactId>freehep-graphicsio-svg</artifactId>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
             <groupId>com.lorainelab</groupId>
             <artifactId>image-exporter</artifactId>
             <scope>provided</scope>
@@ -84,6 +79,11 @@
         <dependency>
             <groupId>com.affymetrix</groupId>
             <artifactId>igbSwingExt</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>biz.aQute.bnd</groupId>
+            <artifactId>bndlib</artifactId>
             <scope>provided</scope>
         </dependency>
     </dependencies>
