--- a/plugins/Protannot/pom.xml
+++ b/plugins/Protannot/pom.xml
@@ -86,6 +86,12 @@
             <artifactId>bndlib</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.4</version>
+            <type>jar</type>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
