--- a/plugins/Protannot/pom.xml
+++ b/plugins/Protannot/pom.xml
@@ -26,7 +26,7 @@
             <artifactId>genometry</artifactId>
             <scope>provided</scope>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>org.freehep</groupId>
             <artifactId>freehep-graphicsio-svg</artifactId>
             <scope>provided</scope>
@@ -89,7 +89,11 @@
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.4</version>
+        </dependency>
+        <dependency>
+            <groupId>com.affymetrix</groupId>
+            <artifactId>shared-lib-wrapper</artifactId>
+            <version>8.5.0</version>
             <type>jar</type>
         </dependency>
          <dependency>
@@ -104,17 +108,20 @@
                 <artifactId>maven-clean-plugin</artifactId>
             </plugin>
             <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-dependency-plugin</artifactId>
-            </plugin>     
+            </plugin>      
             <plugin>
                 <groupId>org.apache.felix</groupId>
                 <artifactId>maven-bundle-plugin</artifactId>
                 <extensions>true</extensions>
                 <configuration>
                     <instructions>    
-                        <Import-Package>*</Import-Package>
+                        <Import-Package>
+                            !org.bioviz.protannot.interproscan.appl.model,
+                            *
+                        </Import-Package>
                         <Export-Package/>                        
-                        <Bundle-SymbolicName>${project.artifactId}</Bundle-SymbolicName>
                         <Service-Component>*</Service-Component>
                     </instructions>
                 </configuration>
