--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -338,7 +338,7 @@ color_by_score=Score
 
 #Toolbar Icon tooltips
 openFileTooltip=Open a data or sequence file.
-openCustomGenomeTooltip=Open a custom genome.
+openCustomGenomeTooltip=Open genome from file.
 preferencesTooltip=Open Preferences window.
 exitTooltip=Quit IGB.
 goToIGBUserGuideTooltip=Open IGB User's Guide in your Web browser.
