Fixed null in protannot title

--- a/plugins/Protannot/src/main/resources/protannot.properties
+++ b/plugins/Protannot/src/main/resources/protannot.properties
@@ -1,7 +1,7 @@
 # 0 - appName
 about=About {0}
 alwaysAnonymous=Always use anonymous access
-appName=Protannot
+appName=ProtAnnot
 appNameShort=PA
 appVersion=2.4
 # 0 - appVersion
