Combined different menus as one

--- a/plugins/Protannot/src/main/resources/protannot.properties
+++ b/plugins/Protannot/src/main/resources/protannot.properties
@@ -63,3 +63,5 @@ openBrowserTip=Shows details in browser
 zoomToFeatureTip=Zoom to selected feature
 toggleHairlineTip=Show/Hide Zoom Stipe
 toggleHairlineLabelTip=Show/Hide Zoom Stripe Label
+
+protannotMenu=ProtAnnot
