Updated protannot menu

--- a/plugins/Protannot/src/main/resources/protannot.properties
+++ b/plugins/Protannot/src/main/resources/protannot.properties
@@ -30,7 +30,8 @@ openFile=Open file
 addServer=Add Server
 serverLoad=Load From Server
 print=Print
-export=Export
+export=Save PAXML File
+saveImage=Save Image
 preferences=Preferences
 exit=Exit
 
