rename sequenceservice, about this genome

--- a/plugins/Protannot/src/main/resources/protannot.properties
+++ b/plugins/Protannot/src/main/resources/protannot.properties
@@ -1,5 +1,6 @@
 # 0 - appName
 about=About {0}
+aboutRegion=About this region
 alwaysAnonymous=Always use anonymous access
 appName=ProtAnnot
 appNameShort=PA
