--- a/plugins/Protannot/pom.xml
+++ b/plugins/Protannot/pom.xml
@@ -112,6 +112,11 @@
             <version>4.3.1</version>
             <type>jar</type>
         </dependency>
+        <dependency>
+            <groupId>com.jidesoft</groupId>
+            <artifactId>jide-ultimate</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
