--- a/plugins/Protannot/pom.xml
+++ b/plugins/Protannot/pom.xml
@@ -121,6 +121,11 @@
             <artifactId>igb</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
