protannot genoviz sdk patch support

--- a/pom.xml
+++ b/pom.xml
@@ -413,7 +413,7 @@
                 <scope>provided</scope>
             </dependency>
             <dependency>
-                <groupId>com.affymetrix</groupId>
+                <groupId>org.bioviz</groupId>
                 <artifactId>protannot</artifactId>
                 <version>${project.version}</version>
                 <scope>provided</scope>
