updated siteNoteResponding message

--- a/core/igb/src/main/resources/igb.properties
+++ b/core/igb/src/main/resources/igb.properties
@@ -396,7 +396,7 @@ bamIndexNotFound=Could not load index file for {0}. An index file is required fo
 #UI Texts for Data Source tab
 dataSourceTabName=Data Sources
 serverCredentials=Server Credentials
-siteNotResponding=Site not responding. Check the URL or contact site maintainers.
+siteNotResponding=Site not responding, or missing required files. Check the URL or contact site maintainers.
 mirrorUrlMessage=Using Mirror URL for this Data Source.
 editDataSource=Edit Data Source
 addDataSource=Add Data Source
