--- a/optionalPlugins/protannot/pom.xml
+++ b/optionalPlugins/protannot/pom.xml
@@ -13,7 +13,8 @@
     <artifactId>protannot</artifactId>
     <packaging>bundle</packaging>
 
-    <name>Protannot</name>
+    <name>ProtAnnot</name>
+    <description>Protein annotation viewer</description>
 
     <dependencies>
         <dependency>
