added import range restriction to prevent this plugin from showing up in igb_8_5+ versions

--- a/optionalPlugins/protannot/pom.xml
+++ b/optionalPlugins/protannot/pom.xml
@@ -170,7 +170,8 @@
                     <instructions>    
                         <Import-Package>
                             com.apple.eawt,
-                            *
+                            com.lorainelab.igb.services;version="[8.4,8.5)",
+			    *
                         </Import-Package>
                         <Export-Package/>                    
                         <Service-Component>*</Service-Component>
