open web browser, interproscan button change, add to tab panel, rest api for ips

--- a/optionalPlugins/protannot/src/main/resources/protannot.properties
+++ b/optionalPlugins/protannot/src/main/resources/protannot.properties
@@ -28,6 +28,7 @@ viewMenuMnemonic=V
 
 # File Menu
 openFile=Open file
+menuRunInterProScan=Run InterProScan
 addServer=Add Server
 serverLoad=Load From Server
 print=Print
@@ -40,7 +41,7 @@ exit=Exit
 copy=Copy protein sequence
 
 #View Menu
-openBrowser=Open Browser
+openBrowser=Open Web Browser
 zoomToFeature=Zoom to Feature
 toggleHairline=Show Zoom Stripe
 toggleHairlineLabel=Show Zoom Stripe Label
