Moved synonymlookup classes to separate modules

--- a/.gitignore
+++ b/.gitignore
@@ -141,3 +141,4 @@ extbundles/
 /developmentPlugins/TutorialHelper/target
 /plugins/Protannot/target/
 /plugins/protannot/target/
+/core/synonym-lookup/target/
