Migrating genometry project for SynonymLookupService

--- a/core/das/pom.xml
+++ b/core/das/pom.xml
@@ -81,6 +81,11 @@
             <artifactId>sam-ext</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>synonym-lookup</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
