--- a/core/das2/pom.xml
+++ b/core/das2/pom.xml
@@ -91,6 +91,11 @@
             <artifactId>tribble-ext</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>synonym-lookup</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
