--- a/core/genometry/pom.xml
+++ b/core/genometry/pom.xml
@@ -124,6 +124,11 @@
             <artifactId>cache-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>synonym-lookup</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
