--- a/plugins/ExternalView/pom.xml
+++ b/plugins/ExternalView/pom.xml
@@ -68,6 +68,11 @@
             <artifactId>affymetrix-common</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>synonym-lookup</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
