--- a/core/igb/pom.xml
+++ b/core/igb/pom.xml
@@ -142,6 +142,11 @@
             <artifactId>cache-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.lorainelab</groupId>
+            <artifactId>synonym-lookup</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
 
     <build>
