Fixed test classes

--- a/core/synonym-lookup/pom.xml
+++ b/core/synonym-lookup/pom.xml
@@ -41,6 +41,11 @@
             <scope>provided</scope>
         </dependency>
         <!--End of logging dependencies-->
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
