--- a/core/das/pom.xml
+++ b/core/das/pom.xml
@@ -73,6 +73,11 @@
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
+            <artifactId>commons-csv</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
             <artifactId>commons-compress</artifactId>
             <scope>provided</scope>
         </dependency>
