--- a/pom.xml
+++ b/pom.xml
@@ -827,6 +827,7 @@
                     <artifactId>maven-javadoc-plugin</artifactId>
                     <configuration>
                         <additionalparam>-Xdoclint:none</additionalparam>
+                        <aggregate>true</aggregate>
                     </configuration>
                 </plugin>
                 <plugin>
